fix: almost working attempt to fix overflow on Web and Mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,11 @@
 body {
   @apply bg-black text-white h-[100vh];
   font-family: "Inter", system-ui, -apple-system, sans-serif;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
+  /* Disable scrolling and set background to the same even if attempted to scroll */
+  overflow: hidden;  
+  /* Fix even for iOS status bar  */
+  height: -webkit-fill-available;
+  
 }
 
 .heading {
@@ -18,6 +21,7 @@ body {
 
 #root {
   @apply h-full;
+  height: 100vh;
 }
 
 .text-goo {
